<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="io.android.bisiparis.ui.DashboardActivity">

    <TextView
        android:id="@+id/adapter_item_order_list_txtOrderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/will_change" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/soup_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/main_course" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/drink_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/desert_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adapter_item_order_list_txtOrderSoup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/will_change" />

            <TextView
                android:id="@+id/adapter_item_order_list_txtOrderMainCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/will_change" />

            <TextView
                android:id="@+id/adapter_item_order_list_txtOrderDrink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/will_change" />

            <TextView
                android:id="@+id/adapter_item_order_list_txtOrderDesert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/will_change" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
