<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="io.android.bisiparis.ui.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/username"
        android:textColor="#FFF9AA" />

    <EditText
        android:id="@+id/activity_login_edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:textColor="#FFF9AA" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/password"
        android:textColor="#FFF9AA" />

    <EditText
        android:id="@+id/activity_login_edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:textColor="#FFF9AA" />

    <CheckBox
        android:id="@+id/activity_login_chkRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/remember_me"
        android:textColor="#FFF9AA" />

    <Button
        android:id="@+id/activity_login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:text="@string/btn_login"
        android:textColor="#FFF9AA"
        android:textSize="@dimen/btn_login"
        android:textStyle="bold"
        tools:ignore="SpUsage" />

</LinearLayout>
